--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: streamMOA
-Version: 1.1-2.1
+Version: 1.1-3
 Date: 2015-x-x
 Title: Interface for MOA Stream Clustering Algorithms
 Authors@R: c(person("Michael", "Hahsler", role = c("aut", "cre", "cph"),
@@ -9,7 +9,7 @@ Authors@R: c(person("Michael", "Hahsler", role = c("aut", "cre", "cph"),
 Description: Interface for data stream clustering algorithms implemented in the MOA (Massive Online Analysis) framework.
 Depends: stream (>= 1.1-2), rJava (>= 0.6-3)
 Imports: graphics, stats, methods
-SystemRequirements: Oracle Java (>= 5.0)
-BugReports: https://github.com/mhahsler/streamMOA/issues
+SystemRequirements: Java (>= 5.0)
+BugReports: https://github.com/mhahsler/streamMOA
 License: GPL-3
 Copyright: MOA code in inst/java/moa.jar is Copyright (C) The University of Waikato and distributed under the Apache License, version 2.0. All other code is Copyright (C) Matthew Bolanos, John Forrest and Michael Hahsler
