--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: streamMOA
 Version: 1.2-0
-Date: 2019-01-03
+Date: 2019-03-14
 Title: Interface for MOA Stream Clustering Algorithms
 Authors@R: c(person("Michael", "Hahsler", role = c("aut", "cre", "cph"),
 	    email = "mhahsler@lyle.smu.edu"),
 	person("John", "Forrest", role = c("aut", "cph")),
 	person("Matthew", "Bolanos", role = c("ctb")),
 	person("Matthias", "Carnein", role = c("ctb")))
-Description: Interface for data stream clustering algorithms implemented in the MOA (Massive Online Analysis) framework.
+Description: Interface for data stream clustering algorithms implemented in the MOA (Massive Online Analysis) framework (Albert Bifet, Geoff Holmes, Richard Kirkby, Bernhard Pfahringer (2010). MOA: Massive Online Analysis, Journal of Machine Learning Research 11: 1601-1604).
 Depends: stream (>= 1.1-2), rJava (>= 0.6-3)
 Imports: graphics, stats, methods
 SystemRequirements: Java (>= 5.0)
