--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
 # History files
 .Rhistory
 .Rapp.history
-
 # Example code in package build process
 *-Ex.R
-
 # RStudio files
 .Rproj.user/
-
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
 .Rproj.user
-
 Work
+.RData
+doc
+Meta
