--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: streamMOA
-Version: 1.2-3
-Date: 2020-12-03
+Version: 1.2-3.1
+Date: 2020-xx-xx
 Encoding: UTF-8
 Title: Interface for MOA Stream Clustering Algorithms
 Authors@R: c(person("Michael", "Hahsler", role = c("aut", "cre", "cph"),
