--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: streamMOA
-Version: 1.2-3.1
-Date: 2020-xx-xx
+Version: 1.2-4
+Date: 2022-05-09
 Encoding: UTF-8
 Title: Interface for MOA Stream Clustering Algorithms
 Authors@R: c(person("Michael", "Hahsler", role = c("aut", "cre", "cph"),
@@ -10,7 +10,7 @@ Authors@R: c(person("Michael", "Hahsler", role = c("aut", "cre", "cph"),
 	person("Matthias", "Carnein", role = c("ctb")),
 	person("Dalibor", "Krleža", role = c("ctb")))
 Description: Interface for data stream clustering algorithms implemented in the MOA (Massive Online Analysis) framework (Albert Bifet, Geoff Holmes, Richard Kirkby, Bernhard Pfahringer (2010). MOA: Massive Online Analysis, Journal of Machine Learning Research 11: 1601-1604).
-Depends: stream (>= 1.5-0), rJava (>= 0.9-0)
+Depends: stream (>= 1.5-1), rJava (>= 0.9-0)
 Imports: graphics, stats, methods
 SystemRequirements: Java (>= 8)
 BugReports: https://github.com/mhahsler/streamMOA
