added provisional support for RMOA clasifiers. rJava issues with multiple loaders need to be fixed.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,12 @@ S3method(get_microweights,DSC_MOA)
 S3method(get_outlier_positions,DSOutlier_MCOD)
 S3method(get_points,DSD_MOA)
 S3method(plot,DSC_MOA)
+S3method(predict,DSClassifier_MOA)
 S3method(print,DSC_MOA)
 S3method(recheck_outlier,DSOutlier_MCOD)
 S3method(update,DSC_MCOD)
 S3method(update,DSC_MOA)
+S3method(update,DSClassifier_MOA)
 export(DSC_BICO_MOA)
 export(DSC_CluStream)
 export(DSC_ClusTree)
@@ -22,6 +24,7 @@ export(DSC_DenStream)
 export(DSC_MCOD)
 export(DSC_MOA)
 export(DSC_StreamKM)
+export(DSClassifier_MOA)
 export(DSD_MOA)
 export(DSD_RandomRBFGeneratorEvents)
 export(DSOutlier_MCOD)
@@ -34,4 +37,5 @@ import(stream)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
 importFrom(graphics,points)
+importFrom(stats,predict)
 importFrom(stats,runif)
