--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Authors@R: c(person("Michael", "Hahsler", role = c("aut", "cre", "cph"),
 Description: Interface for data stream clustering algorithms implemented in the MOA (Massive Online Analysis) framework (Albert Bifet, Geoff Holmes, Richard Kirkby, Bernhard Pfahringer (2010). MOA: Massive Online Analysis, Journal of Machine Learning Research 11: 1601-1604).
 Depends: stream (>= 1.5-1), rJava (>= 0.9-0)
 Imports: graphics, stats, methods
+Suggests: RMOA
 SystemRequirements: Java (>= 8)
 BugReports: https://github.com/mhahsler/streamMOA
 License: GPL-3
