Added RMOA regressors.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,13 @@ S3method(get_outlier_positions,DSOutlier_MCOD)
 S3method(get_points,DSD_MOA)
 S3method(plot,DSC_MOA)
 S3method(predict,DSClassifier_MOA)
+S3method(predict,DSRegressor_MOA)
 S3method(print,DSC_MOA)
 S3method(recheck_outlier,DSOutlier_MCOD)
 S3method(update,DSC_MCOD)
 S3method(update,DSC_MOA)
 S3method(update,DSClassifier_MOA)
+S3method(update,DSRegressor_MOA)
 export(DSC_BICO_MOA)
 export(DSC_CluStream)
 export(DSC_ClusTree)
@@ -28,6 +30,7 @@ export(DSClassifier_MOA)
 export(DSD_MOA)
 export(DSD_RandomRBFGeneratorEvents)
 export(DSOutlier_MCOD)
+export(DSRegressor_MOA)
 export(clean_outliers)
 export(get_outlier_positions)
 export(recheck_outlier)
