Updated man pages. proxy is now imported.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(clean_outliers)
 export(get_outlier_positions)
 export(recheck_outlier)
 import(methods)
+import(proxy)
 import(rJava)
 import(stream)
 importFrom(graphics,lines)
